# train-train

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  spring_festival_xgb_v1.json
models/: characterize_02.py  data_clean.py  data_clean_01.py  forcasting_04.py  test.py  training_03.py
reports/: GB-T-7714_2025_顺序编码_双语_无URL_无DOI_.csl  _quarto.yml  custom-reference.docx  fix_captions.py  fix_figure_layout.py  main_paper.docx  main_paper.qmd  references.bib
reports/figures/: figure_shap_summary.tiff  residual_diag_天津_入站.tiff  residual_diag_天津_出站.tiff  residual_diag_天津西_入站.tiff  residual_diag_天津西_出站.tiff
train_train/: pipeline.py  visualize_pipeline.R
