[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "train_train"
version = "0.0.1"
description = "Just a junior SourceWork."
authors = [
  { name = "Peter Hank" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["train_train"]
include = ["pyproject.toml", "train_train/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["train_train"]
force-sort-within-sections = true

